Bug: home-sections are broken on a large screen; (#50)

--- a/src/common/footer/footer.pcss
+++ b/src/common/footer/footer.pcss
@@ -4,10 +4,12 @@
 
 .Footer {
   width: 100%;
+  max-width: 180em;
   height: 12em;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-self: center;
   margin-top: 8em;
   font-size: 0.8rem;
   position: relative;
